--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load moneda %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -12,6 +13,7 @@
 
   <!-- CSS Personalizado -->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
 </head>
 
 <body style="background-color:#fffaf5;">
