--- a/carrito/templates/carrito/checkout.html
+++ b/carrito/templates/carrito/checkout.html
@@ -34,16 +34,16 @@
                 {% for key, item in carrito.items %}
                 <tr>
                   <td>{{ item.nombre }}</td>
-                  <td class="text-center">{{ item.precio|floatformat:2|moneda }}</td>
+                  <td class="text-center">{{ item.precio|moneda }}</td>
                   <td class="text-center">{{ item.cantidad }}</td>
-                  <td class="text-end">{{ item.cantidad|multiply:item.precio|floatformat:2|moneda }}</td>
+                  <td class="text-end">{{ item.cantidad|multiply:item.precio|moneda }}</td>
                 </tr>
                 {% endfor %}
               </tbody>
               <tfoot>
                 <tr>
                   <th colspan="3" class="text-end fs-5">Total a pagar:</th>
-                  <th class="text-end fw-bold fs-5" style="color:#5a2a00;">{{ total|floatformat:2|moneda }}</th>
+                  <th class="text-end fw-bold fs-5" style="color:#5a2a00;">{{ total|moneda }}</th>
                 </tr>
               </tfoot>
             </table>
